plugins {
    id 'java'
    id 'maven-publish'
    id 'io.github.goooler.shadow' version '8.1.8'
    id 'net.neoforged.gradleutils' version '4.0.1'
}

version = project.minecraft_version + "-" + gradleutils.gitInfo.abbreviatedId
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven {
        name = 'mohistmc'
        url = 'https://maven.mohistmc.com/'
    }
    maven { url "https://maven.fabricmc.net/" }
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
    implementation('com.mohistmc:json:0.5')
    implementation "com.google.code.gson:gson:2.13.2"
    compileOnly "net.fabricmc:fabric-loader:${project.loader_version}"
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
    it.options.encoding = 'UTF-8'
}

jar {
    archiveClassifier = 'server'

    dependsOn(':server:jar')

    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}"}
    }

    manifest {
        attributes(
                'Main-Class': 'com.mohistmc.launcher.silkard.SilkardLauncher',
                'Specification-Title'   : 'Silkard',
                'Specification-Vendor'  : 'MohistMC',
                'Specification-Version' : 'development',
                'Implementation-Title'  : 'Silkard',
                'Implementation-Version': project.version,
                'Implementation-Vendor' : 'MohistMC'
        )
    }

    def serverLibsDir = project(":server").layout.buildDirectory.dir("libs").get().asFile
    from(serverLibsDir) {
        include "*-server.jar"
        into "META-INF/libraries/com/mohistmc/silkard/${version}"
    }
}
